deploy/factory/base/reconciler-cronjob.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-factory-reconciler
  namespace: sandbox
spec:
  podSelector:
    matchLabels:
      factory.gwkline.io/profile: reconciler
  policyTypes: [Ingress, Egress]
  ingress: []
  egress:
    - to:
        - ipBlock: { cidr: 140.82.112.0/20 }
        - ipBlock: { cidr: 185.199.108.0/22 }
        - ipBlock: { cidr: 104.16.0.0/12 }
      ports: [{ protocol: TCP, port: 443 }]
    - ports: [{ protocol: UDP, port: 53 }, { protocol: TCP, port: 53 }]
    - to:
        - ipBlock: { cidr: 10.43.0.1/32 }
      ports: [{ protocol: TCP, port: 443 }]
    - to:
        - ipBlock: { cidr: 192.168.1.2/32 }
      ports: [{ protocol: TCP, port: 6443 }]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-factory-collector
  namespace: sandbox
spec:
  podSelector:
    matchLabels:
      factory.gwkline.io/profile: collector
  policyTypes: [Ingress, Egress]
  ingress: []
  egress:
    - to:
        - ipBlock: { cidr: 140.82.112.0/20 }
        - ipBlock: { cidr: 185.199.108.0/22 }
        - ipBlock: { cidr: 104.16.0.0/12 }
      ports: [{ protocol: TCP, port: 443 }]
    - ports: [{ protocol: UDP, port: 53 }, { protocol: TCP, port: 53 }]
